Merged from trunk r21108 svn merge -r 20965:21108 http://svn.atlassian.com/svn/public/contrib/confluence/confluence-jira3-plugin/trunk/