@@ -81,8 +81,8 @@ public class PortletMacro extends AbstractHttpRetrievalMacro implements TrustedA
 
                 Map contextMap = MacroUtils.defaultVelocityContext();
                 PageContext pageContext = WikiRendererContextKeys.getPageContext(macroParameter.getContext().getParameters());
-                createContextMap(macroParameter, pageContext, contextMap);
-                contextMap.put("portletData", portletData);
+                createContextMap(pageContext, contextMap);
+                contextMap.put("portletDataHtml", portletData);
                 return VelocityUtils.getRenderedTemplate("templates/extra/jira/jiraportlet.vm", contextMap);
             }
             finally
@@ -105,10 +105,10 @@ public class PortletMacro extends AbstractHttpRetrievalMacro implements TrustedA
         }
     }
 
-    protected void createContextMap(MacroParameter macroParameter, PageContext pageContext, Map contextMap)
+    protected void createContextMap(PageContext pageContext, Map contextMap)
     {
         contextMap.put("macroId", nextMacroId(pageContext));
-        contextMap.put("generateHeader", new Boolean(generateJiraPortletHeader(pageContext)));
+        contextMap.put("generateHeader", Boolean.valueOf(generateJiraPortletHeader(pageContext)));
     }
 
     public String getName()
